<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context="com.example.mohamed.popularmovies.DetailsActivity">



    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|enterAlwaysCollapsed"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@color/black"
            android:fitsSystemWindows="true"
            >

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"

                app:popupTheme="@style/Theme.AppCompat.DayNight.DarkActionBar"
                android:fitsSystemWindows="true">

            </android.support.v7.widget.Toolbar>

            <ImageView
                app:layout_collapseMode="parallax"
                android:id="@+id/image_tv"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="300dp" />
            <TextView
                android:id="@+id/name_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/darkGreen"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:padding="20dp"
                android:textColor="@color/white"
                android:textSize="23sp"
                app:layout_collapseMode="pin"
                />
            <ImageButton
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                android:id="@+id/action_up"
                android:padding="10dp"
                android:layout_width="40dp"
                app:layout_collapseMode="pin"
                android:layout_height="?actionBarSize"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="yaw"
                android:src="@drawable/baseline_arrow_back_white_36" />




        </android.support.design.widget.CollapsingToolbarLayout>



    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="10dp">


                <ImageView
                    android:id="@+id/image_tvv"
                    android:layout_width="150dp"
                    android:layout_height="250dp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="60dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/year_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:fontFamily="sans-serif"
                        android:paddingBottom="10dp"

                        android:textColor="@color/white"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/rating_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"

                        android:paddingBottom="20dp"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        >
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:paddingRight="20dp"

                            >
                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_gravity="center"
                                android:id="@+id/add_to_favorite"
                                android:layout_marginBottom="10dp"
                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/favorite"
                                android:layout_gravity="left"
                                android:textColor="@color/white"
                                android:fontFamily="sans-serif"
                                android:textStyle="bold" />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="wrap_content"

                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            >
                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_gravity="center"
                                android:padding="15dp"
                                android:layout_marginBottom="10dp"
                                android:id="@+id/share"
                                android:background="@drawable/sharebutton" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/share"
                                android:layout_gravity="center"
                                android:textColor="@color/white"
                                android:fontFamily="sans-serif"
                                android:textStyle="bold" />
                        </LinearLayout>




                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/white" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:weightSum="100"
                android:layout_gravity="center"
                >
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:id="@+id/buttonStream720"
                    android:background="@color/darkGreen"
                    android:layout_margin="10dp"
                    android:textColor="@color/white"
                    android:padding="10dp"
                    android:text="@string/stream_in_720p"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:id="@+id/buttonStream1080"
                    android:background="@color/darkGreen"
                    android:layout_margin="10dp"
                    android:textColor="@color/white"
                    android:padding="10dp"
                    android:text="@string/stream_in_1080p"/>

            </LinearLayout>


            <ProgressBar
                android:id="@+id/loading_indicator"
                android:layout_height="42dp"
                android:layout_width="42dp"
                android:theme="@style/AppTheme.WhiteAccent"
                android:layout_gravity="center"
                android:visibility="gone" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note_for_stream"
                android:fontFamily="sans-serif"
                android:layout_margin="10dp"
                android:textColor="@color/white"
                android:textSize="15sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_margin="10dp"
                android:text="@string/note_for_streaming_2"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_margin="10dp"
                android:text="@string/streaming_may_take_up_to_5_minutes_to_start"
                />
            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="false"
                android:background="@color/darkGreen"
                android:max="100"
                style="?android:attr/progressBarStyleHorizontal" />
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/white" />

            <TextView
                android:id="@+id/overview_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif"
                android:textColor="@color/white"

                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="10dp"
                android:paddingBottom="20dp"
                android:orientation="vertical">

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/white" />
                <TextView
                    android:paddingTop="10dp"
                    android:paddingLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trailers"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif"
                    android:textSize="25sp">

                </TextView>




                <android.support.v7.widget.RecyclerView
                    android:id="@+id/trailers_tv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </android.support.v7.widget.RecyclerView>

                />
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>




